@@ -319,6 +319,10 @@ public final static short 		EC_TAG_SRCDROP_DROP_HQRS                  = 0x1903;
 public final static short 		EC_TAG_SRCDROP_HQRS_VALUE                 = 0x1904;
 public final static short 		EC_TAG_SRCDROP_AUTODROP_TIMER             = 0x1905;
 public final static short 	EC_TAG_PREFS_DIRECTORIES                  = 0x1A00;
+public final static short 		EC_TAG_DIRECTORIES_INCOMING               = 0x1A01;
+public final static short 		EC_TAG_DIRECTORIES_TEMP                   = 0x1A02;
+public final static short 		EC_TAG_DIRECTORIES_SHARED                 = 0x1A03;
+public final static short 		EC_TAG_DIRECTORIES_SHARE_HIDDEN           = 0x1A04;
 public final static short 	EC_TAG_PREFS_STATISTICS                   = 0x1B00;
 public final static short 		EC_TAG_STATSGRAPH_WIDTH                   = 0x1B01;
 public final static short 		EC_TAG_STATSGRAPH_SCALE                   = 0x1B02;
